# cloud-computing

./: .gitignore  Dockerfile  README.md  Vagrantfile  action.yml  docker-compose.yml  export_env.sh  install-docker-compose.sh  install-docker.sh  nginx.conf  pyproject.toml  start-app.sh
.github/workflows/: docker.yml  login.yml
employee/: admin.py  models.py  serializer.py  views.py
employee/migrations/: 0001_initial.py  0002_counter.py  0003_add_db_index.py
webapp/: settings.py  urls.py
